fixed form and .container width, now to fix center aligned stuff

--- a/src/scss/feed.scss
+++ b/src/scss/feed.scss
@@ -5,8 +5,12 @@
 }
 
 label {
-  width: 90vh;
+  //   width: 90vh;
 }
+
+// input {
+//   width: 100%;
+// }
 
 #exampleInputMessage {
   height: 20vh;
